tests/baselines/reference/constTag2.errors.txt
tests/cases/conformance/jsdoc/constTag2.ts(21,1): error TS2588: Cannot assign to 'c' because it is a constant.
tests/cases/conformance/jsdoc/constTag2.ts(24,1): error TS2588: Cannot assign to 'f' because it is a constant.


==== tests/cases/conformance/jsdoc/constTag2.ts (2 errors) ====
    /** @const {1} */
    var a = 1;
    
    /** @const {1} */
    let b = 1;
    
    /** @const {1} */
    const c = 1;
    
    /** @const */
    var d = 1;
    
    /** @const */
    let e = 1;
    
    /** @const */
    const f = 1;
    
    a = 2;
    b = 2;
    c = 2;
    ~
!!! error TS2588: Cannot assign to 'c' because it is a constant.
    d = 2;
    e = 2;
    f = 2;
    ~
!!! error TS2588: Cannot assign to 'f' because it is a constant.